--- a/SokobanMonoGame/SokobanMonoGame.csproj
+++ b/SokobanMonoGame/SokobanMonoGame.csproj
@@ -43,6 +43,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameSystem\UI\Button.cs" />
     <Compile Include="GameSystem\Crate.cs" />
     <Compile Include="GameSystem\GameParameters.cs" />
     <Compile Include="GameSystem\IDrawable.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="GameSystem\Player.cs" />
     <Compile Include="GameSystem\Sprite.cs" />
     <Compile Include="GameSystem\TextureRegion.cs" />
+    <Compile Include="GameSystem\UI\TextButton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
